# verysimplestats

./: LICENSE  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
verysimplestats/: __init__.py  statistics.py
